# PCB-Skills

./: .gitignore  .pylintrc  AGENTS.md  INSTALL_GUIDE.md  KICAD_SOURCE_GUIDE.md  Makefile  Makefile.unix  README.md  README_KiCad_Integration.md  README_V7.md  RELEASE_v1.0.0.md  SKILL.md  create_220v_12v_psu.py  create_power_supply_v2.py  create_power_supply_v3.py  create_power_supply_v4.py  create_power_supply_v5.py  create_power_supply_v6.py  install_check.py  install_vision_deps.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  simple_designer.py
examples/: esp32_board.py  led_circuit.py  vision_analyzer_demo.py
release/: LICENSE  README.md  auto_power_design_system.py  batch_design_validator.py  chip_database.py  complete_automation.py  extended_designs.py  improved_generator.py  jlcpcb_scraper.py  pcb_visualizer.py  requirements.txt  setup.py
release/scripts/automation/: __init__.py  auto_copper.py  auto_layout.py  auto_router.py
release/scripts/generators/: footprint_lib.py  layout_manager.py  pcb_generator_v2.py  sch_generator_v2.py
scripts/: __init__.py  core.py  core_designer.py  kicad_integration.py  output_manager.py  power_supply_designer.py  run_kicad_skill.py
scripts/generators/: __init__.py  footprint_lib.py  pcb_generator.py  sch_generator.py
scripts/vision/: README.md  __init__.py  auto_analyzer.py
tests/: conftest.py
