[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-automation"
version = "1.0.0"
description = "Natural language interface for KiCad PCB and schematic design automation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "wangzjpku", email = "wangzjpku@163.com"}
]
keywords = [
    "kicad",
    "pcb-design",
    "schematic-design",
    "eda",
    "automation",
    "python-scripting",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/wangzjpku/PCB-Skills"
Documentation = "https://github.com/wangzjpku/PCB-Skills#readme"
Repository = "https://github.com/wangzjpku/PCB-Skills.git"
"Bug Tracker" = "https://github.com/wangzjpku/PCB-Skills/issues"

[project.optional-dependencies]
openai = {version = ">=1.0.0", optional = true}

[tool.setuptools]
packages = ["scripts"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi$'
extend-exclude = '''
/(
  \.git/
  \.venv/
  __pycache__/
  build/
  dist/
  tests/fixtures/
  \.pytest_cache/
  \.mypy_cache/
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_any_generics = false
show_error_codes = true
exclude = '''
(?x)(
  build/
  dist/
  __pycache__/
  tests/fixtures/
  \.venv/
  \.venv2/
)
'''

[[tool.mypy.overrides]]
module = "pcbnew"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["scripts", "examples"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.bandit]
exclude_dirs = [
    "\.venv",
    "\.venv2",
    "\.git",
    "build",
    "dist",
]
tests = ["B201", "B301"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # Wrong-import-order (use isort instead)
    "C0103",  # Missing-docstring-class
    "R0901",  # Too-few-public-methods
    "R0913",  # Too-many-arguments
]
