[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-automation"
version = "1.0.0"
description = "Natural language interface for KiCad PCB and schematic design automation"
readme = "README.md"
requires-python = ">=3.8"
keywords = [ "kicad", "pcb-design", "schematic-design", "eda", "automation", "python-scripting",]
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", "Development Status :: 3 - Alpha", "Environment :: Other Environment", "Intended Audience :: Developers", "Programming Language :: Python :: 3.8", "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",]
[[project.authors]]
name = "wangzjpku"
email = "wangzjpku@163.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/wangzjpku/PCB-Skills"
Documentation = "https://github.com/wangzjpku/PCB-Skills#readme"
Repository = "https://github.com/wangzjpku/PCB-Skills.git"
"Bug Tracker" = "https://github.com/wangzjpku/PCB-Skills/issues"

[tool.setuptools]
packages = [ "scripts",]

[tool.black]
line-length = 100
target-version = [ "py38", "py39", "py310",]
include = "\\.pyi$"
extend-exclude = "/(\n  .git/\n  .venv/\n  __pycache__/\n  build/\n  dist/\n  tests/fixtures/\n  \\.pytest_cache/\n  \\.mypy_cache/\n)/\n"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_any_generics = false
show_error_codes = true
exclude = "(?x)(\n  build/\n  dist/\n  __pycache__/\n  tests/fixtures/\n  .venv/\n  .venv2/\n)\n"
[[tool.mypy.overrides]]
module = "pcbnew"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [ ".venv", ".venv2", ".git", "build", "dist",]
tests = [ "B201", "B301",]

[project.optional-dependencies.openai]
version = ">=1.0.0"
optional = true

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
addopts = [ "-v", "--strict-markers", "--tb=short",]
markers = [ "unit: Unit tests", "integration: Integration tests", "slow: Slow running tests",]
filterwarnings = [ "ignore::DeprecationWarning",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]

[tool.coverage.run]
source = [ "scripts",]
omit = [ "tests/*", "*/tests/*", "*/__pycache__/*",]

[tool.pylint.messages_control]
max-line-length = 100
disable = [ "C0111", "C0103", "R0901", "R0913",]
